MNEMONIC-663: Fix illegal reflective access operation in ChunkBuffer
Signed-off-by: Chunyong He <chunyong.he@gmail.com>